# api

./: Cargo.toml  Makefile  README.md
grpc/: Cargo.toml  README.md  build.rs
grpc/migrations/2020-04-04-150608_create_projects/: up.sql
grpc/proto/: service.proto  wallet.proto
grpc/src/: client.rs  commands.rs  models.rs  rpc.rs  schema.rs  server.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
rest/: Cargo.toml  README.md
rest/migrations/2020-04-04-154105_create_transfers/: down.sql  up.sql
rest/src/: api.rs  handlers.rs  main.rs  models.rs  schema.rs
rsocket/: Cargo.toml
rsocket/src/: client.rs  main.rs  server.rs
src/: api.rs  handlers.rs  main.rs  models.rs  psql.rs  routes.rs  tests.rs
