[package]
name = "grpc"
version = "0.1.0"
authors = ["kuronyago <y.pesterev@gmail.com>"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "grpc_client"
path = "src/client.rs"
test = false
bench = false

[[bin]]
name = "grpc_server"
path = "src/server.rs"
test = false
bench = false

[dependencies]
tonic = "0.2.0"
prost = "0.6.1"
tokio = { version = "0.2.16", features = ["macros"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.8"
dotenv = "0.15.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = "1.0.106"
serde_json = "1.0.50"
serde_derive = "1.0.106"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.2.0"