[package]
name = "rsocket"
version = "0.1.0"
authors = ["kuronyago <yegor.pesterev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rsocket_server"
path = "src/server.rs"

[[bin]]
name = "rsocket_client"
path = "src/client.rs"

[dependencies]
tokio = "0.2.16"
rsocket_rust = "0.5.0"
rsocket_rust_transport_websocket = "0.5.0"
log = "0.4.8"
env_logger = "0.7.1"
futures = "0.3.4"

[dev-dependencies.tokio]
version = "0.2.16"
default-features = false
features = ["full"]